added a calendar to the home page
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7072 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/layout/xml.apache.org/home.html
+++ b/src/resources/layout/xml.apache.org/home.html
@@ -268,6 +268,75 @@
    </div>
   </div>
     
+  <div class="frame">
+   <div class="label">Calendar of Events</div>
+   <div class="content">
+    <table class="calendar" align="center">
+    	<tr class="month">
+    	 <td><a href="calendar/2002/01" title="January 2002">&laquo;</a></td>
+    	 <td colspan="5">
+    	  <a href="calendar/2002/02" nowrap="true">February 2002</a>
+    	 </td>
+    	 <td><a href="calendar/2002/03" title="March 2002">&raquo;</a></td>
+    	</tr>
+    	<tr class="days">
+     	<td>Sun</td>
+     	<td>Mon</td>
+     	<td>Tue</td>
+     	<td>Wed</td>
+     	<td>Thu</td>
+     	<td>Fri</td>
+     	<td>Sat</td>
+    	</tr>
+  	  <tr>
+     	<td>&nbsp;</td>
+     	<td>&nbsp;</td>
+     	<td>&nbsp;</td>
+     	<td>&nbsp;</td>
+     	<td>&nbsp;</td>
+     	<td>1</td>
+     	<td>2</td>
+    	</tr>
+     <tr>
+     	<td>3</td>
+     	<td>4</td>
+     	<td>5</td>
+     	<td>6</td>
+     	<td>7</td>
+     	<td>8</td>
+     	<td>9</td>
+    	</tr>
+     <tr>
+     	<td>10</td>
+     	<td>11</td>
+     	<td>12</td>
+     	<td>13</td>
+     	<td>14</td>
+     	<td>15</td>
+     	<td>16</td>
+    	</tr>
+     <tr>
+     	<td>17</td>
+     	<td class="active"><a href="calendar/2002/02/18">18</a></td>
+     	<td>19</td>
+     	<td>20</td>
+     	<td>21</td>
+     	<td>22</td>
+     	<td class="current">23</td>
+  	  </tr>
+     <tr>
+     	<td>24</td>
+     	<td>25</td>
+     	<td>26</td>
+     	<td>27</td>
+     	<td>28</td>
+     	<td>&nbsp;</td>
+     	<td>&nbsp;</td>
+    	</tr>
+    </table>   
+   </div>
+  </div>  
+  
  </td>
 </tr>
 </table>
