--- a/src/resources/layout/xml.apache.org/home.css
+++ b/src/resources/layout/xml.apache.org/home.css
@@ -43,3 +43,9 @@ a:hover { color: #880000; }
 .news .by a { color: #7099C5; }
 .news .text { margin: 5px 0px 0px 0px; }
 .news img { float: left; margin: 5px 5px 5px 5px; border: 0px; width: 35px; height: 35px; }
+
+.calendar { width: 1px; font-size: 9px; text-align: center; }
+.calendar .month { font-size: 12px; }
+.calendar .days { font-weight: bold; }
+.calendar .active { font-size: 11px; font-weight: bold; }
+.calendar .current { background-color: #CFDCED; }
