added patches due to KPiroumian@flagship.ru
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7090 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/layout/xml.apache.org/home.css
+++ b/src/resources/layout/xml.apache.org/home.css
@@ -1,4 +1,4 @@
-body { font-family: verdana,arial,helvetica,sans-serif; font-size: 10px; }
+body { background-color: #FFFFFF; margin: 0px; font-family: verdana,arial,helvetica,sans-serif; font-size: 10px; }
 form { margin: 0px; padding: 0px; border: 0px; }
 ul { margin: 0px 5px 0px 25px; padding: 0px; }
 li { margin: 2px 0px 2px 0px; }
