--- a/src/resources/layout/xml.apache.org/home.html
+++ b/src/resources/layout/xml.apache.org/home.html
@@ -4,7 +4,7 @@
  <link rel="stylesheet" href="home.css" type="text/css"/>
 </head>
 
-<body topmargin="0" leftmargin="0" marginheight="0" marginwidth="0">
+<body>
 
 <form method="get" action="http://www.google.com/search" onsubmit="q.value = query.value + ' site:xml.apache.org'">
 
