--- a/src/resources/layout/xml.apache.org/page.html
+++ b/src/resources/layout/xml.apache.org/page.html
@@ -99,8 +99,12 @@
         <p>This is a paragraph. A paragraph is a block of text that describes 
           one or more concepts. It is usually formatted to look like a block of 
           text and for this reason is separated by other block-type elements with 
-          top and bottom paddings.</p>
-
+          top and bottom paddings. </p>
+        <p>Text can have inline decorations such as: <strong>strong</strong>, 
+          <em>emphasis</em>, <code>code</code>, <sub>subscript</sub>, <sup>superscript</sup> 
+          and <span class="highlight">highlight</span>. <br>
+          Paragraph text can be multiline like this and<br>
+          text can also have <a href="/">links</a> and <a href="#">anchors</a>.</p>
         <h3>Section</h3>
         <p>This is a paragraph under a section.</p>
         <pre class="code">This is a preformatted text,
@@ -161,16 +165,12 @@ that should preserv
 
 		<h4>Subsection</h4>		
 
-        <p>Text can have inline decorations such as: <strong>strong</strong>, 
-          <em>emphasis</em>, <code>code</code>, <sub>subscript</sub>, <sup>superscript</sup> 
-          and <span class="highlight">highlight</span>.</p>
-          		
         <p>This is another paragraph. A paragraph is a block of text that describes 
           one or more concepts. It is usually formatted to look like a block of 
           text and for this reason is separated by other block-type elements with 
           top and bottom paddings. </p>
-          
-  <div class="frame note">
+          		
+        <div class="frame note">
    <div class="label">Note</div>
    <div class="content">This is a note paragraph. It is used to indicate something
         that should stand out to the reader but without indicating problems,
