added a minitoc for documents containing sections, tweaked the sitemap accordingly
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7117 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/documentation/skins/forrest-site/css/page.css
+++ b/src/documentation/skins/forrest-site/css/page.css
@@ -69,3 +69,5 @@ table.table { width: 100%; font-size: 11px; background-color: #7099C5; color: #f
 .icon {}
 
 .highlight { background-color: yellow; }
+
+.minitoc {font-size: 8pt; margin: 5px 5px 5px 40px;}
