--- a/src/resources/skins/bert/css/page.css
+++ b/src/resources/skins/bert/css/page.css
@@ -1,26 +1,27 @@
-body {  background-color: #FFFFFF; margin: 0px 0px 0px 0px; font-size: 1em; font-family: Arial, Helvetica, sans-serif}
+body {  background-color: #FFFFFF; margin: 0px 0px 0px 0px; font-family: Arial, Helvetica, sans-serif;  font : 12px;  }
 
-a:link { color: #0F3660 }
-a:visited { color: #880000 }
-a:active { font-weight: bold }
-a:hover { color: #880000; }
+a:link { color: #0F3660; }
+a:visited { color: #009999; }
+a:active { color: #000066; }
+a:hover { color: #000066; }
 
-.menu { background-color: #4C6C8F; margin: 0px; padding: 3px 8px 5px 3px; font-size: 1em}
-.menu a:link { color: #FFFFFF }
-.menu a:visited { color: #FFFFFF }
-.menu a:active { font-weight: bold }
-.menu a:hover { color: #880000; }
+.menu { background-color: #4C6C8F; margin: 0px; padding: 3px 8px 5px 3px;  font : 12px;  }
+.menu a:link { color: #FFFFFF;  text-decoration : none;  }
+.menu a:visited { color: #FFFFFF; text-decoration : none; }
+/*.menu a:active { font-weight: bold }*/
+.menu a:hover { color: #FFCC00; text-decoration : none; }
 .menu ul { margin: 0px 0px 0px 20px; padding: 0px; }
-.menu li  { list-style-image: url('images/chapter.gif'); }
+.menu li  { list-style-image: url('images/label.gif'); }
+.menu ul ul li .sel { list-style-image: url('images/current.gif'); }
 .menu ul ul li  { list-style-image: url('images/page.gif'); }
 
-.content { padding: 5px 5px 5px 10px; }
-.content table { width: 100%; font-size: 1em; background-color: #7099C5; color: #ffffff; }
-.content table .caption { text-align: left; color: black; }
-.content table .th { text-align: center; }
-.content td { background-color: #f0f0ff; color: black; }
+.content { padding: 5px 5px 5px 10px;  font : small;  font-size : 12px;   }
+.content table { width: 100%; background-color: #7099C5; color: #ffffff;  font-size : 12px;}
+.content table .caption { text-align: left; color: black; font-size : 12px; }
+.content table .th { text-align: center;  font-size : 12px;}
+.content td { background-color: #f0f0ff; color: black;  font-size : 12px;}
 
-.frame { width: 100%; margin: 5px 20px 5px 20px; font-size: 1em; }
+.frame { width: 100%; margin: 5px 20px 5px 20px;  }
 .frame .content { margin: 0px; }
 
 .note { border: solid 1px #7099C5; background-color: #f0f0ff; }
@@ -32,10 +33,8 @@ a:hover { color: #880000; }
 .fixme { border: solid 1px #C6C600; background-color: #FAF9C3; }
 .fixme .label { background-color: #C6C600; color: #ffffff; }
 
-.code { border-color: #CFDCED; border-style: solid; border-width: 1px; font-size: 0.75em;}
-
-.dida { font-size: 1em; }
+.code { border-color: #CFDCED; border-style: solid; border-width: 1px; }
 
 .highlight { background-color: yellow; }
 
-.minitoc {font-size: 1em; margin: 5px 5px 5px 40px;}
+.minitoc {margin: 5px 5px 5px 40px;}
