making forrestbar use new icons
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7298 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/forrestbar/content/forrestbar/forrestbar.css
+++ b/src/resources/forrestbar/content/forrestbar/forrestbar.css
@@ -21,7 +21,7 @@ image.forrestbar {
 }
 
 image#forrestbar-logo {
- 	list-style-image: url("images/apache.png");
+ 	list-style-image: url("images/apache.gif");
 }
 
 button.forrestbar {
@@ -29,38 +29,38 @@ button.forrestbar {
 }
 
 button#forrestbar-search {
-	list-style-image: url("images/search-off.png");
+	list-style-image: url("images/search-off.gif");
 }
 button#forrestbar-search:hover {
-	list-style-image: url("images/search.png");
+	list-style-image: url("images/search.gif");
 }
 
 button#forrestbar-news {
-	list-style-image: url("images/news-off.png");
+	list-style-image: url("images/news-off.gif");
 }
 button#forrestbar-news:hover {
-	list-style-image: url("images/news.png");
+	list-style-image: url("images/news.gif");
 }
 
 button#forrestbar-code {
-	list-style-image: url("images/code-off.png");
+	list-style-image: url("images/code-off.gif");
 }
 button#forrestbar-code:hover {
-	list-style-image: url("images/code.png");
+	list-style-image: url("images/code.gif");
 }
 
 button#forrestbar-download {
-	list-style-image: url("images/download-off.png");
+	list-style-image: url("images/download-off.gif");
 }
 button#forrestbar-download:hover {
-	list-style-image: url("images/download.png");
+	list-style-image: url("images/download.gif");
 }
 
 button#forrestbar-tools {
-	list-style-image: url("images/tools-off.png");
+	list-style-image: url("images/tools-off.gif");
 }
 button#forrestbar-tools:hover {
-	list-style-image: url("images/tools.png");
+	list-style-image: url("images/tools.gif");
 }
 
 button#forrestbar-asksam {
