css patched for mozilla thanks to robmv@promca.com
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7300 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/skins/forrest-site/css/page.css
+++ b/src/resources/skins/forrest-site/css/page.css
@@ -43,7 +43,7 @@ a:hover { color: #880000; }
 
 .content { padding: 5px 5px 5px 10px; }
 
-.frame { width: 100%; margin: 5px 20px 5px 20px; font-size: 11px; }
+.frame { margin: 5px 20px 5px 20px; font-size: 11px; }
 .frame .content { margin: 0px; }
 
 .note { border: solid 1px #7099C5; background-color: #f0f0ff; }
@@ -58,8 +58,8 @@ a:hover { color: #880000; }
 .code { border-color: #CFDCED; border-style: solid; border-width: 1px; }
 
 table.table { width: 100%; font-size: 11px; background-color: #7099C5; color: #ffffff; }
-.table caption { text-align: left; text-weight: bold; color: black; }
-.table th { text-align: center; text-weight: bold; }
+.table caption { text-align: left; font-weight: bold; color: black; }
+.table th { text-align: center; font-weight: bold; }
 .table td { background-color: #f0f0ff; color: black; }
 
 .dida { font-size: 9px; }
