solve font size problem in Mozilla
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7326 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/skins/bert/css/page.css
+++ b/src/resources/skins/bert/css/page.css
@@ -1,11 +1,11 @@
-body {  background-color: #FFFFFF; margin: 0px 0px 0px 0px; font-family: Arial, Helvetica, sans-serif;  font : 12px;  }
+body {  background-color: #FFFFFF; margin: 0px 0px 0px 0px; font-family: Arial, Helvetica, sans-serif;  font-size : 12px;  }
 
 a:link { color: #0F3660; }
 a:visited { color: #009999; }
 a:active { color: #000066; }
 a:hover { color: #000066; }
 
-.menu { background-color: #4C6C8F; margin: 0px; padding: 3px 8px 5px 3px;  font : 12px;  }
+.menu { background-color: #4C6C8F; margin: 0px; padding: 3px 8px 5px 3px;  font-size : 12px;  }
 .menu a:link { color: #FFFFFF;  text-decoration : none;  }
 .menu a:visited { color: #FFFFFF; text-decoration : none; }
 /*.menu a:active { font-weight: bold }*/
