resolve code tag in documents.  Fixed width fonts are generally a little smaller in most browsers, no resizing has been done.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7329 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/skins/bert/css/page.css
+++ b/src/resources/skins/bert/css/page.css
@@ -34,6 +34,7 @@ a:hover { color: #000066; }
 .fixme .label { background-color: #C6C600; color: #ffffff; }
 
 .code { border-color: #CFDCED; border-style: solid; border-width: 1px; }
+.codefrag {	font-family: "Courier New", Courier, monospace; }
 
 .highlight { background-color: yellow; }
 
