Added 'printable' link to document title
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7358 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/skins/bert/css/page.css
+++ b/src/resources/skins/bert/css/page.css
@@ -15,11 +15,14 @@ a:hover { color: #000066; }
 .menu ul ul li .sel { list-style-image: url('images/current.gif'); }
 .menu ul ul li  { list-style-image: url('images/page.gif'); }
 
+table .title { background-color: #FFFFFF; width:100%; border: 0px; }
+.dida { font-size: 9px; }
+
 .content { padding: 5px 5px 5px 10px;  font : small;  font-size : 12px;   }
-.content table { width: 100%; background-color: #7099C5; color: #ffffff;  font-size : 12px;}
-.content table .caption { text-align: left; color: black; font-size : 12px; }
-.content table .th { text-align: center;  font-size : 12px;}
-.content td { background-color: #f0f0ff; color: black;  font-size : 12px;}
+.content .table { width: 100%; background-color: #7099C5; color: #ffffff;  font-size : 12px;}
+.content .table .caption { text-align: left; color: black; font-size : 12px; }
+.content .table .th { text-align: center;  font-size : 12px;}
+.content .table td { background-color: #f0f0ff; color: black;  font-size : 12px;}
 
 .frame { margin: 5px 20px 5px 20px; font-size: 12px; }
 .frame .content { margin: 0px; }
