--- a/src/resources/skins/bert/css/page.css
+++ b/src/resources/skins/bert/css/page.css
@@ -19,10 +19,10 @@ table .title { background-color: #FFFFFF; width:100%; border: 0px; }
 .dida { font-size: 9px; }
 
 .content { padding: 5px 5px 5px 10px;  font : small;  font-size : 12px;   }
-.content .table { width: 100%; background-color: #7099C5; color: #ffffff;  font-size : 12px;}
-.content .table .caption { text-align: left; color: black; font-size : 12px; }
-.content .table .th { text-align: center;  font-size : 12px;}
-.content .table td { background-color: #f0f0ff; color: black;  font-size : 12px;}
+.content .ForrestTable { width: 100%; background-color: #7099C5; color: #ffffff;  font-size : 12px;}
+.content .ForrestTable .caption { text-align: left; color: black; font-size : 12px; }
+.content .ForrestTable th { text-align: center;  font-size : 12px;}
+.content .ForrestTable td { background-color: #f0f0ff; color: black;  font-size : 12px;}
 
 .frame { margin: 5px 20px 5px 20px; font-size: 12px; }
 .frame .content { margin: 0px; }
