Forgot to add the new DTD styling classes.  ;-)
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7362 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/skins/bert/css/page.css
+++ b/src/resources/skins/bert/css/page.css
@@ -42,3 +42,7 @@ table .title { background-color: #FFFFFF; width:100%; border: 0px; }
 .highlight { background-color: yellow; }
 
 .minitoc {margin: 5px 5px 5px 40px;}
+
+.dtdElement { width: 100%;	font-size: 12px; background-color : #ffffff; }
+
+.dtdTag {    color: #990000; text-transform : uppercase;  font-style : normal;  font-size : 15px;  font-weight : bold; }
