Got out my toothbrush and polished the menu labels.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7363 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/skins/bert/css/page.css
+++ b/src/resources/skins/bert/css/page.css
@@ -11,9 +11,9 @@ a:hover { color: #000066; }
 /*.menu a:active { font-weight: bold }*/
 .menu a:hover { color: #FFCC00; text-decoration : none; }
 .menu ul { margin: 0px 0px 0px 20px; padding: 0px; }
-.menu li  { list-style-image: url('images/label.gif'); }
-.menu ul ul li .sel { list-style-image: url('images/current.gif'); }
-.menu ul ul li  { list-style-image: url('images/page.gif'); }
+.menu li  { list-style-image: url('images/label.gif'); font-weight : bold; }
+.menu ul ul li .sel { list-style-image: url('images/current.gif'); font-weight : normal; }
+.menu ul ul li  { list-style-image: url('images/page.gif'); font-weight : normal; }
 
 table .title { background-color: #FFFFFF; width:100%; border: 0px; }
 .dida { font-size: 9px; }
