Synchronise changes from the new "bert" skin.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7371 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/skins/forrest-site/css/page.css
+++ b/src/resources/skins/forrest-site/css/page.css
@@ -1,49 +1,30 @@
-body {  background-color: #FFFFFF; margin: 0px 0px 0px 0px; font-size: 10px; font-family: Verdana, Arial, Helvetica, sans-serif}
-form { margin: 0px; padding: 0px; border: 0px; }
-ul,ol { margin: 10px 5px 10px 40px; padding: 0px; }
-li { margin: 2px 0px 2px 0px; }
-dl { margin: 10px 5px 10px 20px; padding: 0px; }
-dt { font-weight: bold; margin: 5px 0px 0px 0px; }
-table { border: 0px; width: 100%; }
-td { font-size: 12px; font-family: Verdana, Arial, Helvetica, sans-serif }
-img { border: 0px; }
-pre { padding: 10px 10px 10px 10px; margin-bottom: 0px }
+body {  background-color: #FFFFFF; margin: 0px 0px 0px 0px; font-family: Arial, Helvetica, sans-serif;  font-size : 12px;  }
 
-a:link { color: #0F3660 }
-a:visited { color: #880000 }
-a:active { font-weight: bold }
-a:hover { color: #880000; }
+a:link { color: #0F3660; }
+a:visited { color: #009999; }
+a:active { color: #000066; }
+a:hover { color: #000066; }
 
-.path { font-size: 10px; background-color: #CFDCED; border-bottom-color: #4A6D8C; border-bottom-style: solid; border-bottom-width: 2px; padding: 2px; }
-.path .current { font-weight: bold; }
-
-.top { background-color: #294563; }
-.top img { margin: 5px; }
-.topline { background-color: #4C6C8F; }
-.navbar { background-color: #CFDCED; color: #4C6C8F; font-weight: bold; border-bottom-color: #4A6D8C; border-bottom-style: solid; border-bottom-width: 1px; padding: 2px;}
-
-.search { font-size: 13px; color: #ffffff; margin-right: 10px; padding: 10px 5px 3px 5px; background-color: #4A6D8C; }
-
-.tabs { font-size: 12px; background-color: #294563; padding: 2px 7px 5px 7px; }
-.tabs .tab { background-color: #CFDCED; padding: 4px 6px 4px 6px;}
-.tabs .current { background-color: #4C6C8F; font-weight: bold; padding: 5px 6px 6px 6px; ; color: #FFFFFF}
-
-.copyright { text-align: center; font-size: 10px; background-color: #CFDCED; border-top-color: #4A6D8C; border-top-style: solid; border-top-width: 1px; padding: 2px; }
-
-.menu { background-color: #4C6C8F; margin: 0px; padding: 3px 8px 5px 3px;}
-.menu a:link { color: #FFFFFF }
-.menu a:visited { color: #FFFFFF }
-.menu a:active { font-weight: bold }
-.menu a:hover { color: #880000; }
+.menu { background-color: #4C6C8F; margin: 0px; padding: 3px 8px 5px 3px;  font-size : 12px;  }
+.menu a:link { color: #FFFFFF;  text-decoration : none;  }
+.menu a:visited { color: #FFFFFF; text-decoration : none; }
+/*.menu a:active { font-weight: bold }*/
+.menu a:hover { color: #FFCC00; text-decoration : none; }
 .menu ul { margin: 0px 0px 0px 20px; padding: 0px; }
-.menu li .chapter  { list-style-image: url('images/chapter.gif'); font-weight: bold }
-.menu li .open  { list-style-image: url('images/chapter_open.gif'); font-weight: bold }
-.menu li .page  { list-style-image: url('images/page.gif') }
-.menu li .current  { list-style-image: url('images/current.gif'); color: #FFD700; font-weight: bold; }
+.menu li  { list-style-image: url('images/label.gif'); font-weight : bold; }
+.menu ul ul li .sel { list-style-image: url('images/current.gif'); font-weight : normal; }
+.menu ul ul li  { list-style-image: url('images/page.gif'); font-weight : normal; }
 
-.content { padding: 5px 5px 5px 10px; }
+table .title { background-color: #FFFFFF; width:100%; border: 0px; }
+.dida { font-size: 9px; }
 
-.frame { margin: 5px 20px 5px 20px; font-size: 11px; }
+.content { padding: 5px 5px 5px 10px;  font : small;  font-size : 12px;   }
+.content .ForrestTable { width: 100%; background-color: #7099C5; color: #ffffff;  font-size : 12px;}
+.content .ForrestTable .caption { text-align: left; color: black; font-size : 12px; }
+.content .ForrestTable th { text-align: center;  font-size : 12px;}
+.content .ForrestTable td { background-color: #f0f0ff; color: black;  font-size : 12px;}
+
+.frame { margin: 5px 20px 5px 20px; font-size: 12px; }
 .frame .content { margin: 0px; }
 
 .note { border: solid 1px #7099C5; background-color: #f0f0ff; }
@@ -56,18 +37,12 @@ a:hover { color: #880000; }
 .fixme .label { background-color: #C6C600; color: #ffffff; }
 
 .code { border-color: #CFDCED; border-style: solid; border-width: 1px; }
-
-table.table { width: 100%; font-size: 11px; background-color: #7099C5; color: #ffffff; }
-.table caption { text-align: left; font-weight: bold; color: black; }
-.table th { text-align: center; font-weight: bold; }
-.table td { background-color: #f0f0ff; color: black; }
-
-.dida { font-size: 9px; }
-
-.figure {}
-
-.icon {}
+.codefrag {	font-family: "Courier New", Courier, monospace; }
 
 .highlight { background-color: yellow; }
 
-.minitoc {font-size: 8pt; margin: 5px 5px 5px 40px;}
+.minitoc {margin: 5px 5px 5px 40px;}
+
+.dtdElement { width: 100%;	font-size: 12px; background-color : #ffffff; }
+
+.dtdTag {    color: #990000; text-transform : uppercase;  font-style : normal;  font-size : 15px;  font-weight : bold; }
