Solving font size problem by using percent
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7408 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/skins/forrest-site/css/page.css
+++ b/src/resources/skins/forrest-site/css/page.css
@@ -1,11 +1,11 @@
-body {  background-color: #FFFFFF; margin: 0px 0px 0px 0px; font-family: Verdana, Helvetica, sans-serif;  font-size : 12px;  }
+body {  background-color: #FFFFFF; margin: 0px 0px 0px 0px; font-family: Verdana, Helvetica, sans-serif;  font-size : 90%;  }
 
 a:link { color: #0F3660; }
 a:visited { color: #009999; }
 a:active { color: #000066; }
 a:hover { color: #000066; }
 
-.menu { background-color: #4C6C8F; margin: 0px; padding: 3px 8px 5px 3px;  font-size : 12px;  }
+.menu { background-color: #4C6C8F; margin: 0px; padding: 3px 8px 5px 3px;  font-size : 90%;  }
 .menu a:link { color: #FFFFFF;  text-decoration : none;  }
 .menu a:visited { color: #FFFFFF; text-decoration : none; }
 /*.menu a:active { font-weight: bold }*/
@@ -16,15 +16,15 @@ a:hover { color: #000066; }
 .menu ul ul li  { list-style-image: url('images/page.gif'); font-weight : normal; }
 
 table .title { background-color: #FFFFFF; width:100%; border: 0px; }
-.dida { font-size: 9px; }
+.dida { font-size: 60%; }
 
-.content { padding: 5px 5px 5px 10px;  font : small;  font-size : 12px;   }
-.content .ForrestTable { width: 100%; background-color: #7099C5; color: #ffffff;  font-size : 12px;}
-.content .ForrestTable .caption { text-align: left; color: black; font-size : 12px; }
-.content .ForrestTable th { text-align: center;  font-size : 12px;}
-.content .ForrestTable td { background-color: #f0f0ff; color: black;  font-size : 12px;}
+.content { padding: 5px 5px 5px 10px;  font : small;  font-size : 90%; }
+.content .ForrestTable { width: 100%; background-color: #7099C5; color: #ffffff; font-size : 90%;}
+.content .ForrestTable .caption { text-align: left; color: black; }
+.content .ForrestTable th { text-align: center; }
+.content .ForrestTable td { background-color: #f0f0ff; color: black; }
 
-.frame { margin: 5px 20px 5px 20px; font-size: 12px; }
+.frame { margin: 5px 20px 5px 20px; font-size: 90%; }
 .frame .content { margin: 0px; }
 
 .note { border: solid 1px #7099C5; background-color: #f0f0ff; }
@@ -43,6 +43,6 @@ table .title { background-color: #FFFFFF; width:100%; border: 0px; }
 
 .minitoc {margin: 5px 5px 5px 40px;}
 
-.dtdElement { width: 100%;	font-size: 12px; background-color : #ffffff; }
+.dtdElement { width: 100%;	font-size: 90%; background-color : #ffffff; }
 
-.dtdTag {    color: #990000; text-transform : uppercase;  font-style : normal;  font-size : 15px;  font-weight : bold; }
+.dtdTag {    color: #990000; text-transform : uppercase;  font-style : normal;  font-size : 120%;  font-weight : bold; }
