Allow <p xml:space="preserve">, which lets one avoid abusing <code> to preserve whitespace.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7460 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/skins/avalon-site/css/common.css
+++ b/src/resources/skins/avalon-site/css/common.css
@@ -161,6 +161,11 @@ a.breadcrumbs:hover, a.breadcrumbs:active, a.menu:hover, a.menu:active {
 .fixed {
       	font-family: Courier, Courier New, monospace;
        }
+
+.pre {
+        white-space: pre;
+     }
+
 @media print {
 	body td {
 		font-family: Times New Roman, Zurich Bt, serif;
