--- a/src/resources/skins/basic/css/style.css
+++ b/src/resources/skins/basic/css/style.css
@@ -152,6 +152,9 @@ a.breadcrumbs:hover, a.breadcrumbs:active, a.menu:hover, a.menu:active {
 .code, pre {
 	font-size: 11px;
 }
+
+.pre { white-space: pre;}
+
 .section .code {
 	margin-left: -40px;
 }
