--- a/src/resources/skins/forrest-site/css/page.css
+++ b/src/resources/skins/forrest-site/css/page.css
@@ -20,7 +20,7 @@ table .title { background-color: #FFFFFF; width:100%; border: 0px; }
 
 .pre { white-space: pre;}
 
-.content { padding: 5px 5px 5px 10px;  font : small;  font-size : 90%; }
+.content { padding: 5px 5px 5px 10px; font : small Verdana, Helvetica, sans-serif;  font-size : 90%; }
 .content .ForrestTable { width: 100%; background-color: #7099C5; color: #ffffff; font-size : 90%;}
 .content .ForrestTable caption { text-align: left; color: black; font-weight: bold; }
 .content .ForrestTable th { text-align: center; }
