Now buttons are flat, and it's much nicer and slimmer :-)
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7703 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/forrestbar/content/forrestbar/forrestbar.css
+++ b/src/resources/forrestbar/content/forrestbar/forrestbar.css
@@ -24,48 +24,48 @@ image#forrestbar-logo {
  	list-style-image: url("images/apache.gif");
 }
 
-button.forrestbar {
+toolbarbutton.forrestbar {
 	 padding: 1px 0px 1px 10px;
 }
 
-button#forrestbar-search {
+toolbarbutton#forrestbar-search {
 	list-style-image: url("images/search-off.gif");
 }
-button#forrestbar-search:hover {
+toolbarbutton#forrestbar-search:hover {
 	list-style-image: url("images/search.gif");
 }
 
-button#forrestbar-news {
+toolbarbutton#forrestbar-news {
 	list-style-image: url("images/news-off.gif");
 }
-button#forrestbar-news:hover {
+toolbarbutton#forrestbar-news:hover {
 	list-style-image: url("images/news.gif");
 }
 
-button#forrestbar-code {
+toolbarbutton#forrestbar-code {
 	list-style-image: url("images/code-off.gif");
 }
-button#forrestbar-code:hover {
+toolbarbutton#forrestbar-code:hover {
 	list-style-image: url("images/code.gif");
 }
 
-button#forrestbar-download {
+toolbarbutton#forrestbar-download {
 	list-style-image: url("images/download-off.gif");
 }
-button#forrestbar-download:hover {
+toolbarbutton#forrestbar-download:hover {
 	list-style-image: url("images/download.gif");
 }
 
-button#forrestbar-tools {
+toolbarbutton#forrestbar-tools {
 	list-style-image: url("images/tools-off.gif");
 }
-button#forrestbar-tools:hover {
+toolbarbutton#forrestbar-tools:hover {
 	list-style-image: url("images/tools.gif");
 }
 
-button#forrestbar-asksam {
+toolbarbutton#forrestbar-asksam {
 	list-style-image: url("images/asksam-off.png");
 }
-button#forrestbar-asksam:hover {
+toolbarbutton#forrestbar-asksam:hover {
 	list-style-image: url("images/asksam.png");
 }
