Adding icons for Gump nightly and local Forrest.
Basically a cry for help by a serious icon graphic!!!
Heeeeeeeeeeelp!  ;-)


git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7722 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/forrestbar/content/forrestbar/forrestbar.css
+++ b/src/resources/forrestbar/content/forrestbar/forrestbar.css
@@ -69,3 +69,19 @@ toolbarbutton#forrestbar-asksam {
 toolbarbutton#forrestbar-asksam:hover {
 	list-style-image: url("images/asksam.png");
 }
+
+toolbarbutton#forrestbar-gump-nightly {
+	list-style-image: url("images/gump-off.png");
+}
+toolbarbutton#forrestbar-gump-nightly:hover {
+	list-style-image: url("images/gump.png");
+}
+
+toolbarbutton#forrestbar-local-forrest {
+	list-style-image: url("images/local-forrest.png");
+}
+toolbarbutton#forrestbar-local-forrest:hover {
+	list-style-image: url("images/local-forrest.png");
+}
+
+
