--- a/src/resources/skins/avalon-tigris/css/site.css
+++ b/src/resources/skins/avalon-tigris/css/site.css
@@ -1,38 +1,50 @@
-/*
- * Other colors:
- *  - dark blue: #036
- *  - bluish: #269
- *
- */
-
-/*
- * The Banner section.
- */
-.banner, .projectLogo, .groupLogo, .projectLogo a, .groupLogo a,
-    .groupLogo a:visited, .projectLogo a:visited,
-    .groupLogo a:link, .projectLogo a:link {
-  font-weight: bold;
-  color: #036;
-  font-size: large;
+div#banner {
+ border-top: 1px solid #fff;
+ border-bottom: 1px solid #aaa;
 }
 
-/*
- * The Status + Footer section.
- */
-.status, .breadcrumb, .searcher, .tabs {
-  font-weight: bold;
-  font-size: x-small;
-  background-color: #ddd;
-  border-top: 1px solid #eee;
-  border-bottom: 1px solid #aaa;
-  padding-left: 12px;
-  padding-right: 12px;
-  vertical-align: middle;
-  color: #036;
+#banner, #banner td {
+ background: #fff;
+ color: #036;
+}
+
+#tabs {
+  text-align: right;
+  align=right
 }
 
 .selectedTab {
-  color: #036;
+  color: #036;	
+}
+
+ a.unselectedTab {
+  color: #88888;	
+}
+
+#source {
+ background-color: #fff;
+ color: #000;
+ border-right: 1px solid #888;
+ border-left: 1px solid #888;
+ border-top: 1px solid #888;
+ border-bottom: 1px solid #888;
+ margin-right: 7px;
+ margin-left: 7px;
+ margin-top: 1em;
+}
+
+#source pre {
+ margin-right: 7px;
+ margin-left: 7px;
+}
+
+/* make the whole column grey */
+#navcolumn {
+ width: 150px;
+ }
+
+#leftcol {
+ width: 150px;
 }
 
 /*
@@ -40,15 +52,9 @@
  */
 .menuColumn {
 }
-.menubar {
-  padding-left: 12px;
-  background: #eee;
-  border-top: 1px solid #fff;
-  border-right: 1px solid #aaa;
-  border-bottom: 1px solid #aaa;
-}
+
 .menu {
-  padding-bottom: .5em;
+  padding-bottom: .2em;
   font-size: x-small;
   text-decoration: none;
 }
@@ -58,83 +64,19 @@
   text-decoration: none;
 }
 
-/*
- * The Content section.
- */
-.contentColumn {
-  margin-top: 8px;
-  margin-bottom: 8px;
-  margin-right: 8px;
-  margin-left: 8px;
+/* breadcrumbs */
+#breadcrumbs
+{
+	font-weight: bold;
 }
-
-h1, h2, h3, h4 {
-  padding-top: 3px;
-  padding-bottom: 3px;
-  padding-left: 12px;
-  padding-right: 12px;
-  vertical-align: middle;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  margin-right: 0px;
-  margin-left: 0px;
+.breadcrumbTrail
+{
+	padding-left: 5px;
 }
-
-h3, h4 { color: #fff; }
-h3 { background-color: #036; }
-h4 { background-color: #888; }
-
-.code {
-  font-family: 'Andale Mono', Courier, monospace;
-  border-color: #CFDCED;
-  border-style: solid;
-  border-width: 1px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  padding-left: 5px;
-  padding-right: 5px;
+.breadcrumb
+{
+	font-weight: bold;
 }
-
-.section {
-  padding-bottom: 10px;
-}
-
-.subsection {
-  padding-bottom: 5px;
-}
-
-/*
- * The Footer section.
- */
-.footer, .copyright, .host, .credit {
-  text-align: center;
-  padding: 1px 1px;
-  font-size: xx-small;
-}
-
-/*
- * General Settings
- */
-body {
-  background: #fff;
-  color: #000;
-  text-decoration: none;
-}
-
-a:link, .menuItem a:visited, .status a:visited {
- color: blue;
-}
-
-a:active, a:hover {
-  color: #f30 !important;
-  text-decoration: none;
-}
-
-body, th, td {
-  font-family: Verdana, Helvetica, Arial, sans-serif;
-  font-size: small;
-}
-
-.logoImage {
-  vertical-align: top;
+.crumbSeparator
+{
 }
