<action dev="NKB" type="update" context="forrestbar">         Tweaked forrestbar, added a sub-project menu for Jakarta, fixed         download link and added submenu for tools.       </action>
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7853 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/forrestbar/content/forrestbar/forrestbar.css
+++ b/src/resources/forrestbar/content/forrestbar/forrestbar.css
@@ -56,10 +56,10 @@ toolbarbutton#forrestbar-download:hover {
 	list-style-image: url("images/download.gif");
 }
 
-toolbarbutton#forrestbar-tools {
+button#forrestbar-tools {
 	list-style-image: url("images/tools-off.gif");
 }
-toolbarbutton#forrestbar-tools:hover {
+button#forrestbar-tools:hover {
 	list-style-image: url("images/tools.gif");
 }
 
@@ -80,8 +80,17 @@ toolbarbutton#forrestbar-gump-nightly:hover {
 toolbarbutton#forrestbar-local-forrest {
 	list-style-image: url("images/local-forrest.png");
 }
+
 toolbarbutton#forrestbar-local-forrest:hover {
 	list-style-image: url("images/local-forrest.png");
 }
+
+button#forrestbar-projects {
+	list-style-image: url("images/apache.gif");
+}
+button#forrestbar-projects:hover {
+	list-style-image: url("images/apache.gif");
+}
+
 
 
