Tweaked forrestbar, added a sub-project menu for Jakarta, fixed         download link and added submenu for tools and gump.
Take2


git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7854 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/forrestbar/content/forrestbar/forrestbar.css
+++ b/src/resources/forrestbar/content/forrestbar/forrestbar.css
@@ -16,7 +16,7 @@ textbox.forrestbar {
 }
 
 image.forrestbar {
-	border: 1px solid black;
+	border: 0px;
 	margin: 0px 0px 0px 3px;
 }
 
@@ -24,71 +24,72 @@ image#forrestbar-logo {
  	list-style-image: url("images/apache.gif");
 }
 
-toolbarbutton.forrestbar {
+.forrestbar {
 	 padding: 1px 0px 1px 10px;
 }
 
-toolbarbutton#forrestbar-search {
+
+#forrestbar-search {
 	list-style-image: url("images/search-off.gif");
 }
-toolbarbutton#forrestbar-search:hover {
+#forrestbar-search:hover {
 	list-style-image: url("images/search.gif");
 }
 
-toolbarbutton#forrestbar-news {
+#forrestbar-news {
 	list-style-image: url("images/news-off.gif");
 }
-toolbarbutton#forrestbar-news:hover {
+#forrestbar-news:hover {
 	list-style-image: url("images/news.gif");
 }
 
-toolbarbutton#forrestbar-code {
+#forrestbar-code {
 	list-style-image: url("images/code-off.gif");
 }
-toolbarbutton#forrestbar-code:hover {
+#forrestbar-code:hover {
 	list-style-image: url("images/code.gif");
 }
 
-toolbarbutton#forrestbar-download {
+#forrestbar-download {
 	list-style-image: url("images/download-off.gif");
 }
-toolbarbutton#forrestbar-download:hover {
+#forrestbar-download:hover {
 	list-style-image: url("images/download.gif");
 }
 
-button#forrestbar-tools {
+#forrestbar-tools {
 	list-style-image: url("images/tools-off.gif");
 }
-button#forrestbar-tools:hover {
+#forrestbar-tools:hover {
 	list-style-image: url("images/tools.gif");
 }
 
-toolbarbutton#forrestbar-asksam {
+#forrestbar-asksam {
 	list-style-image: url("images/asksam-off.png");
 }
-toolbarbutton#forrestbar-asksam:hover {
+#forrestbar-asksam:hover {
 	list-style-image: url("images/asksam.png");
 }
 
-toolbarbutton#forrestbar-gump-nightly {
+#forrestbar-gump-nightly {
 	list-style-image: url("images/gump-off.png");
 }
-toolbarbutton#forrestbar-gump-nightly:hover {
+#forrestbar-gump-nightly:hover {
 	list-style-image: url("images/gump.png");
 }
 
-toolbarbutton#forrestbar-local-forrest {
+#forrestbar-local-forrest {
 	list-style-image: url("images/local-forrest.png");
 }
 
-toolbarbutton#forrestbar-local-forrest:hover {
+#forrestbar-local-forrest:hover {
 	list-style-image: url("images/local-forrest.png");
 }
 
-button#forrestbar-projects {
+#forrestbar-projects {
 	list-style-image: url("images/apache.gif");
 }
-button#forrestbar-projects:hover {
+#forrestbar-projects:hover {
 	list-style-image: url("images/apache.gif");
 }
 
