--- a/src/resources/skins/avalon-tigris/css/tigris.css
+++ b/src/resources/skins/avalon-tigris/css/tigris.css
@@ -6,12 +6,12 @@ body {
  background: #fff;
  color: #000;
  }
-.app h3, .app h4, .tabs td, .tabs th, .functnbar {
- background-image: url(../images/nw_min.gif);
+.app h3, .app h4, .app th, .tabs td, .tabs th, .functnbar {
+ background-image: url(images/nw_maj_rond.gif);
  background-repeat: no-repeat;
  }
 #navcolumn div div, body.docs #toc li li  {
- background-image: url(../images/strich.gif);
+ background-image: url(images/strich.gif);
  background-repeat: no-repeat;
  background-position: .5em .5em;
  }
@@ -42,7 +42,7 @@ table, th, td {
 div.colbar {
  background: #bbb;
  }
-#banner {
+div#banner {
  border-top: 1px solid #369;
  border-bottom: 1px solid #003;
  }
@@ -54,27 +54,14 @@ div#helptext td {
  border-bottom: 1px solid #cc9;
  border-right: 1px solid #cc9;
  }
-.tabs th {
+.tabs { 
+ border-bottom: .75em #888 solid;
+ }
+.tabs th, .tabs td {
  border-right: 1px solid #333;
- background-color: #ddd;
- color: #fff;
  }
 .tabs td {
- background-color: #999;
- border-bottom: 1px solid #fff;
- border-right: 1px solid #fff;
- }
-.tabs {
- border-bottom: 6px #ddd solid;
- }
-.tabs th, .tabs th a:link, .tabs th a:visited {
- color: #555;
- }
-.tabs td, .tabs td a:link, .tabs td a:visited  {
- color: #fff;
- }
-.tabs a  {
- text-decoration: none;
+ border-bottom: 1px solid #ddd;
  }
 #navcolumn {
  background: #eee;
@@ -83,7 +70,7 @@ div#helptext td {
  }
 #breadcrumbs {
  border-bottom: 1px solid #aaa;
- background-color: #ddd
+ background-color: #ddd;
  }
 #navcolumn, #breadcrumbs {
  border-top: 1px solid #fff;
@@ -102,19 +89,19 @@ body.docs div.docs {
  border-top: 1px solid #ddd;
  }
 body.docs { 
- background: #eee url(../images/help_logo.gif) top right no-repeat !important;
+ background: #eee url(images/help_logo.gif) top right no-repeat !important;
  }
 .docs h3, .docs h4 {
  border-top: solid 1px #000;
  }
 #alerterrormessage { 
- background: url(../images/icon_alert.gif) top left no-repeat !important;
+ background: url(images/icon_alert.gif) top left no-repeat !important;
  }
 .functnbar {
  background-color: #aaa;
  }
 .functnbar2, .functnbar3  {
- background: #aaa url(../images/sw_min.gif) no-repeat bottom left;
+ background: #aaa;
  }
 .functnbar3 {
  background-color: #ddd;
@@ -138,10 +125,6 @@ body.docs {
 a:link, #navcolumn a:visited, .app a:visited, .tasknav a:visited {
  color: blue;
  }
-a:link.selfref, a:visited.selfref {
- color: #555 !important;
- text-decoration: none;
- }
 a:active, a:hover, #leftcol a:active, #leftcol a:hover {
  color: #f30 !important;
  }
@@ -155,19 +138,29 @@ a:active, a:hover, #leftcol a:active, #leftcol a:hover {
 #leftcol a, #breadcrumbs a  {
  text-decoration: none;
  }
-#apphead h2 em {
- color: #777;
- }
 a:link.selfref, a:visited.selfref {
  color: #555 !important;
  text-decoration: none;
  }
+h2 .lastchild {
+ color: #777
+ } 
+.tabs td, .tabs th {
+ background-color: #ddd;
+ }
 .app th {
  background-color: #bbb;
+ }
+.tabs th {
+ background-color: #888;
+ color: #fff;
  }
 .axial th {
  background-color: #ddd;
  color: black
+ }
+.tabs td {
+ background-color: #ddd;
  }
 .alert { 
  color: #c00;
@@ -190,6 +183,9 @@ a:link.selfref, a:visited.selfref {
 #helptext td {
  background: #ffc;
  }
+.tabs a  {
+ text-decoration: none;
+ }
 #navcolumn div strong {
  color: #000;
  }
@@ -200,10 +196,7 @@ a:link.selfref, a:visited.selfref {
 body #banner #login a { 
  color: #fff;
  }
-h4 a:link, h4 a:visited  {
- text-decoration: underline;
- color: #fff;
- }
+
 
 /* font and text properties, exclusive of link indication, alignment, text-indent */
 
@@ -228,7 +221,7 @@ small, div#footer td, div#login, div.tabs th, div.tabs td, input, select, .pagin
  voice-family: inherit;
  font-size: x-small
  }
-html>body small, html>body div#footer td, html>body div#login, html>body div.tabs th, html>body div.tabs td, html>body input, html>body select, html>body .paginate, html>body .functnbar, html>body .functnbar2, html>body .functnbar3, html>body #breadcrumbs td, html>body .courtesylinks, html>body #rightcol div.help, html>body .colbar, html>body .tasknav, html>body.docs #toc, html>body #leftcol {
+html>body small, html>body div#footer td, html>body div#login, html>body div#helptext td, html>body div#helptext th, html>body div.tabs th, html>body div.tabs td, html>body input, html>body select, html>body .paginate, html>body .functnbar, html>body .functnbar2, html>body .functnbar3, html>body #breadcrumbs td, html>body .courtesylinks, html>body #rightcol div.help, html>body .colbar, html>body .tasknav, html>body.docs #toc {
  font-size: x-small
  }
 #bodycol h2 {
@@ -236,15 +229,26 @@ html>body small, html>body div#footer td, html>body div#login, html>body div.tab
  font-size: 1.5em;
  font-weight: normal;
  }
-.tabs td, .tabs th, dt, .tasknav .selfref, #login .username, .selection {
+h2 small {
+ font-weight: bold;
+ letter-spacing: .06em;
+ }
+dt {
  font-weight: bold
+ }
+#login .username {
+ font-weight: bold;
  }
 h4 {
  font-size: 1em;
  }
-#apphead h2 em {
-	font-style: normal;
+#breadcrumbs td {
+ font-weight: bold;
  } 
+.selection {
+ font-weight: bold
+ }
+
 
 /* box properties (exclusive of borders), positioning, alignments, list types, text-indent */
 
@@ -290,7 +294,7 @@ html>body #bodycol {
  margin-bottom: 1.33em
  }
 div.colbar {
- padding: 3px;
+ padding: 4px;
  margin: 2px 2px 0;
  }
 .tabs { 
@@ -305,9 +309,6 @@ div.colbar {
  vertical-align: middle;
  padding: 2px 8px;
  } 
-.tabs td, .tabs th {
- padding: 3px 9px;
- }
 #rightcol div.www, #rightcol div.help {
  padding: 0 .5em
  }
@@ -382,6 +383,10 @@ th, td {
 .center {
  text-align: center !important;
  }
+.tabs td, .tabs th {
+ padding-left: 7px;
+ padding-right: 7px;
+ }
 .axial th {
  text-align: right;
  }
@@ -424,4 +429,6 @@ dd {
 #banner, #banner td { 
  vertical-align: middle;
  }
-
+body.docs, body.nonav {
+ margin: 1em
+ }
