<action dev="NKB" type="update" context="skins" >         Make the forrest-site and krysalis-site skins more printer friendly by         using CSS media type to hide navigations. the avalon-tigris skin already         works well, the forrest-site one still needs tweaking.       </action>
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8091 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/skins/forrest-site/css/page.css
+++ b/src/resources/skins/forrest-site/css/page.css
@@ -48,3 +48,9 @@ table .title { background-color: #FFFFFF; width:100%; border: 0px; }
 .dtdElement { width: 100%;	font-size: 90%; background-color : #ffffff; }
 
 .dtdTag {    color: #990000; text-transform : uppercase;  font-style : normal;  font-size : 120%;  font-weight : bold; }
+
+
+@media print {
+   .menu {
+     display: none;
+   }
