--- a/src/resources/skins/krysalis-site/css/page.css
+++ b/src/resources/skins/krysalis-site/css/page.css
@@ -170,4 +170,20 @@ textarea { font-size : 70% }
 }
 
 
+@media print {
+  .menu { display: none;  }
+  .minitoc { display: none;  }
+  .search { display: none;  }
+  .footnote { display: none;  }
+  .tab  { display: none;  }
+  .trail  { display: none;  }
+  .top-left { display: none;  }
+  .top-right { display: none;  }
+  .top-left-tab  { display: none;  }
+  .top-right-tab  { display: none;  }
+  .bottom-left  { display: none;  }
+  .bottom-right  { display: none;  }
+  .bottom-left-thick { display: none;  }
+  .bottom-right-thick  { display: none;  }
 
+}
