Fixed font sizes; now it works well with full DTD. Fixed CSS; now it validates. Added CSS validation link in common template. Removed fixed font in common stylesheet for unselected tab.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8114 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/skins/krysalis-site/css/page.css
+++ b/src/resources/skins/krysalis-site/css/page.css
@@ -1,42 +1,38 @@
-body {  background-color: #FFFFFF; margin: 0px 0px 0px 0px; font-family: Verdana, Helvetica, sans-serif;  font-size : 80%;  }
+body {  background-color: #FFFFFF; margin: 0px 0px 0px 0px; font-family: Verdana, Helvetica, sans-serif;  font-size : 100%;  }
 
 p {  background-color: #FFFFFF; margin: 10px 0px 0px 0px; font-family: Verdana, Helvetica, sans-serif;  font-size : 100%;  }
 
 a:link { color: #0F3660; }
 a:visited { color: #009999; }
 a:active { color: #000066; }
-a:hover { color: #000000; border: 0px solid #a5b6c6; background: #CFDCED; !important}
+a:hover { color: #000000; border: 0px solid #a5b6c6; background: #CFDCED; }
 
 .menu { background-color: #F7F7F7; margin: 0px; padding: 3px 3px 5px 3px;  font-size : 70%;  }
 .menu a:link { color: #000000;  text-decoration : none;  }
 .menu a:visited { color: #000000; text-decoration : none; }
-/*.menu a:active { font-weight: bold }*/
 .menu a:hover { color: #00AA77; text-decoration : none; }
 .menu ul { margin: 0px 0px 6px 8px; padding: 0px; }
 .menu li { margin: 0px 0px 2px 0px; padding: 0px; list-style-image: url('images/label.gif'); font-weight : bold; }
-.menu ul ul li .sel { list-style-image: url('images/current.gif');   font-style : plain;
+.menu ul ul li .sel { list-style-image: url('images/current.gif');   font-style : normal;
                       background-color:#CFDCED; border-color: #a5b6c6; border-style: solid; border-width: 1px;}
 .menu ul ul li  { list-style-image: url('images/page.gif'); font-weight : normal; }
 
 table .title { background-color: #FFFFFF; width:100%; border: 0px; }
-.dida { font-size: 60%; }
+.dida { font-size: 80%; }
 
 .pre { white-space: pre;}
 
-h1 { font-size : 140%; margin: 0px 0px 0px 0px; padding: 0px; }
-h2 { font-size : 130%; margin: 10px 0px 0px 0px; padding: 0px; font-weight : bold;}
-h3 { font-size : 110%; margin: 18px 0px 0px 0px; padding: 0px; font-weight : bold; }
-h4 { font-size : 100%; margin: 18px 0px 0px 0px; padding: 0px; font-weight : plain; text-align: left; }
-h5 { font-size : 90%; margin: 14px 0px 0px 0px; padding: 0px; font-weight : plain; text-align: left; }
+h1 { font-size : 160%; margin: 0px 0px 0px 0px; padding: 0px; }
+h2 { font-size : 140%; margin: 10px 0px 0px 0px; padding: 0px; font-weight : bold;}
+h3 { font-size : 130%; margin: 18px 0px 0px 0px; padding: 0px; font-weight : bold; }
+h4 { font-size : 120%; margin: 18px 0px 0px 0px; padding: 0px; font-weight : normal; text-align: left; }
+h5 { font-size : 100%; margin: 14px 0px 0px 0px; padding: 0px; font-weight : normal; text-align: left; }
 
 .content { padding: 5px 5px 5px 10px; font : small Verdana, Helvetica, sans-serif;  font-size : 80%;  }
 .content .ForrestTable { width: 100%; background-color: #7099C5; color: #ffffff; font-size : 100%;}
 .content .ForrestTable caption { text-align: left; color: black; font-weight: bold; }
 .content .ForrestTable th { text-align: center; }
 .content .ForrestTable td { background-color: #f0f0ff; color: black; }
-
-//.frame { margin: 5px 20px 5px 20px; font-size: 100%; }
-//.frame .content { margin: 2px; }
 
 
 .note, .warning, .fixme {
@@ -61,17 +57,19 @@ h5 { font-size : 90%; margin: 14px 0px 0px 0px; padding: 0px; font-weight : plai
 	border-color: #069;
 }
 
+.label{
+	font-weight: bold;
+}
 
-//.note { border: solid 1px #7099C5; background-color: #f0f0ff; }
-//.note .label { background-color: #7099C5; color: #ffffff; }
 
-//.warning { border: solid 1px #D00000; background-color: #fff0f0; }
-//.warning .label { background-color: #D30000; color: #ffffff; }
+.code { background-color: #F7F7F7;
+        border-color: #CFDCED;
+        border-style: solid; 
+        border-width: 1px; 
+        font-size : 120%;
+        padding: 1em 1.33em 1em 1.33em;
+}
 
-//.fixme { border: solid 1px #C6C600; background-color: #FAF9C3; }
-//.fixme .label { background-color: #C6C600; color: #ffffff; }
-
-.code { border-color: #CFDCED; border-style: solid; border-width: 1px; font-size : 120%;}
 .codefrag {	font-family: "Courier New", Courier, monospace; font-size : 120%;}
 
 .highlight { background-color: yellow; }
@@ -86,7 +84,7 @@ submit { font-size : 70%  }
 button { font-size : 70%  }
 textarea { font-size : 70% }
 
-.tab { font-size : 70%; border: 0 }
+.tab { font-size : 85%; border: 0 }
 .tab a:link {   text-decoration : none;  }
 .tab a:visited { text-decoration : none; }
 
@@ -101,8 +99,8 @@ textarea { font-size : 70% }
 	background-image: url(images/top-left.png);
 	background-repeat: no-repeat;
 	background-position: top left;
-	width : 5;
-	height : 5;
+	width : 5px;
+	height : 5px;
 }
 
 .top-right {
@@ -110,8 +108,8 @@ textarea { font-size : 70% }
 	background-image: url(images/top-right.png);
 	background-repeat: no-repeat;
 	background-position: top right;
-	width : 5;
-	height : 5;
+	width : 5px;
+	height : 5px;
 }
 
 .top-left-tab  {
@@ -119,8 +117,8 @@ textarea { font-size : 70% }
 	background-image: url(images/top-left.png);
 	background-repeat: no-repeat;
 	background-position: top left;
-	width : 5;
-	height : 5;
+	width : 5px;
+	height : 5px;
 }
 
 .top-right-tab {
@@ -128,8 +126,8 @@ textarea { font-size : 70% }
 	background-image: url(images/top-right.png);
 	background-repeat: no-repeat;
 	background-position: top right;
-	width : 5;
-	height : 5;
+	width : 5px;
+	height : 5px;
 }
 
 
@@ -138,8 +136,8 @@ textarea { font-size : 70% }
 	background-image: url(images/bottom-left.png);
 	background-repeat: no-repeat;
 	background-position: bottom left;
-	width : 5;
-	height : 5;
+	width : 5px;
+	height : 5px;
 }
 
 .bottom-right {
@@ -147,8 +145,8 @@ textarea { font-size : 70% }
 	background-image: url(images/bottom-right.png);
 	background-repeat: no-repeat;
 	background-position: bottom right;
-	width : 5;
-	height : 5;
+	width : 5px;
+	height : 5px;
 }
 
 .bottom-left-thick {
@@ -156,8 +154,8 @@ textarea { font-size : 70% }
 	background-image: url(images/bottom-left.png);
 	background-repeat: no-repeat;
 	background-position: bottom left;
-	width : 5;
-	height : 9;
+	width : 5px;
+	height : 9px;
 }
 
 .bottom-right-thick {
@@ -165,8 +163,8 @@ textarea { font-size : 70% }
 	background-image: url(images/bottom-right.png);
 	background-repeat: no-repeat;
 	background-position: bottom right;
-	width : 5;
-	height : 9;
+	width : 5px;
+	height : 9px;
 }
 
 
