--- a/src/resources/skins/forrest-site/css/page.css
+++ b/src/resources/skins/forrest-site/css/page.css
@@ -8,15 +8,18 @@ a:hover { color: #000066; }
 .menu { background-color: #4C6C8F; margin: 0px; padding: 3px 8px 5px 3px;  font-size : 90%;  }
 .menu a:link { color: #FFFFFF;  text-decoration : none;  }
 .menu a:visited { color: #FFFFFF; text-decoration : none; }
-/*.menu a:active { font-weight: bold }*/
 .menu a:hover { color: #FFCC00; text-decoration : none; }
 .menu ul { margin: 0px 0px 0px 20px; padding: 0px; }
 .menu li  { list-style-image: url('images/label.gif'); font-weight : bold; }
 .menu ul ul li .sel { list-style-image: url('images/current.gif'); font-weight : normal; }
 .menu ul ul li  { list-style-image: url('images/page.gif'); font-weight : normal; }
 
+.tab { font-size : 85%; border: 0 }
+.tab a:link {   text-decoration : none;  }
+.tab a:visited { text-decoration : none; }
+
 table .title { background-color: #FFFFFF; width:100%; border: 0px; }
-.dida { font-size: 60%; }
+.dida { font-size: 80%; }
 
 .pre { white-space: pre;}
 
@@ -54,3 +57,4 @@ table .title { background-color: #FFFFFF; width:100%; border: 0px; }
    .menu {
      display: none;
    }
+}
