- Put text size up to 100%, which gets things looking identical to pre-DTD-fix   (and monospace is readable). - Higher contrast for non-selected tabs
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8122 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/skins/forrest-site/css/page.css
+++ b/src/resources/skins/forrest-site/css/page.css
@@ -1,4 +1,4 @@
-body {  background-color: #FFFFFF; margin: 0px 0px 0px 0px; font-family: Verdana, Helvetica, sans-serif;  font-size : 90%;  }
+body {  background-color: #FFFFFF; margin: 0px 0px 0px 0px; font-family: Verdana, Helvetica, sans-serif;  font-size : 100%;  }
 
 a:link { color: #0F3660; }
 a:visited { color: #009999; }
@@ -16,7 +16,8 @@ a:hover { color: #000066; }
 
 .tab { font-size : 85%; border: 0 }
 .tab a:link {   text-decoration : none;  }
-.tab a:visited { text-decoration : none; }
+.tab a:visited { text-decoration : none; color: #2A4A6D }
+.tab a:hover { color: #000066; }
 
 table .title { background-color: #FFFFFF; width:100%; border: 0px; }
 .dida { font-size: 80%; }
