<action dev="NKB" type="add" context="skins">        On krysalis skin: users can select font size, reworked left-bar inclusion        of page section titles, made them only one level deep, moved buttons after        the left navbar, added publish date on top right navbar.        For both Forrest and krysalis skins, added single background pixel line below        unselected tabs and made selected tab more prominent.       </action>
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8257 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/skins/krysalis-site/css/page.css
+++ b/src/resources/skins/krysalis-site/css/page.css
@@ -15,6 +15,9 @@ a:hover { color: #000000; border: 0px solid #a5b6c6; background: #CFDCED; }
 .menu li { margin: 0px 0px 2px 0px; padding: 0px; list-style-image: url('images/label.gif'); font-weight : bold; }
 .menu ul ul li .sel { list-style-image: url('images/current.gif');   font-style : normal;
                       background-color:#CFDCED; border-color: #a5b6c6; border-style: solid; border-width: 1px;}
+.menu ul ul li .page { list-style-image: none;   font-style : normal;
+                      background-color:#ffffff; border-color: #a5b6c6; border-style: solid; border-width: 1px;
+                      font-size : 90%;}
 .menu ul ul li  { list-style-image: url('images/page.gif'); font-weight : normal; }
 
 table .title { background-color: #FFFFFF; width:100%; border: 0px; }
@@ -78,6 +81,7 @@ h5 { font-size : 100%; margin: 14px 0px 0px 0px; padding: 0px; font-weight : nor
 
 .search { font-size : 70%;  }
 .footnote { font-size : 70%;  }
+.datenote { font-size : 60%;  color: #F7F7F7;}
 
 input { font-size : 70% }
 submit { font-size : 70%  }
