--- a/src/resources/skins/krysalis-site/css/page.css
+++ b/src/resources/skins/krysalis-site/css/page.css
@@ -3,22 +3,95 @@ body {  background-color: #FFFFFF; margin: 0px 0px 0px 0px; font-family: Verdana
 p {  background-color: #FFFFFF; margin: 10px 0px 0px 0px; font-family: Verdana, Helvetica, sans-serif;  font-size : 100%;  }
 
 a:link { color: #0F3660; }
-a:visited { color: #009999; }
-a:active { color: #000066; }
+a:visited { color: #000000; }
+a:active { color: #000000; }
 a:hover { color: #000000; border: 0px solid #a5b6c6; background: #CFDCED; }
 
-.menu { background-color: #F7F7F7; margin: 0px; padding: 3px 3px 5px 3px;  font-size : 70%;  }
-.menu a:link { color: #000000;  text-decoration : none;  }
-.menu a:visited { color: #000000; text-decoration : none; }
-.menu a:hover { color: #00AA77; text-decoration : none; }
-.menu ul { margin: 0px 0px 6px 8px; padding: 0px; }
-.menu li { margin: 0px 0px 2px 0px; padding: 0px; list-style-image: url('images/label.gif'); font-weight : bold; }
-.menu ul ul li .sel { list-style-image: url('images/current.gif');   font-style : normal;
-                      background-color:#CFDCED; border-color: #a5b6c6; border-style: solid; border-width: 1px;}
-.menu ul ul li .page { list-style-image: none;   font-style : normal;
-                      background-color:#ffffff; border-color: #a5b6c6; border-style: solid; border-width: 1px;
-                      font-size : 90%;}
-.menu ul ul li  { list-style-image: url('images/page.gif'); font-weight : normal; }
+.menu a:link { color: #000000;  }
+
+.menu { background-color: #F7F7F7; 
+        padding: 8px 0px 4px 0px;  
+        margin: 0px; 
+        font-size : 70%;
+}
+
+.menutitle { 
+        padding: 0px 3px 5px 10px;  
+        background-image: url('images/chapter_open.gif');
+        background-repeat: no-repeat;
+        background-position: center left;
+        font-weight : bold;}
+
+.menu .menuitemgroup { 
+        margin: 0px 0px 6px 8px; 
+        padding: 0px;  
+        font-weight : bold; }
+        
+        
+.menu .menuitem { 
+        padding: 0px 0px 2px 10px;  
+        background-image: url('images/page.gif');
+        background-repeat: no-repeat;
+        background-position: center left;
+        font-weight : normal; 
+}
+
+.menu .menupage {         
+        padding: 4px 3px 5px 10px;  
+        background-image: url('images/current.gif');
+        background-repeat: no-repeat;
+        background-position: top left;
+        font-style : normal;
+
+        
+}
+
+.menu .menupagetitle { 
+        padding: 0px 0px 0px 6px;     
+        font-style : normal;
+        background-color:#CFDCED; 
+        border-color: #a5b6c6; 
+        border-style: solid; 
+        border-width: 1px;
+        
+}
+
+.menu .menupageitemgroup { 
+        padding: 3px 0px 4px 6px;    
+        font-style : normal;
+        background-color:#ffffff; 
+        border-color: #a5b6c6; 
+        border-style: solid; 
+        border-width: 1px;
+        
+}
+
+.menu .menupageitem {             
+  
+        font-style : normal;
+        font-weight : normal; 
+        border-width: 0px;
+        font-size : 90%;
+}
+
+
+.smallerfont {             
+          font-size : 100%;
+        padding: 0px 0px 0px 0px;   
+}
+
+
+.biggerfont {             
+        font-size : 100%;
+        font-weight : bold;      
+        padding: 0px 0px 0px 0px;   
+}
+
+.resetfont {             
+        font-size : 100%;
+        font-weight : normal; 
+          padding: 0px 0px 0px 0px;  
+}
 
 table .title { background-color: #FFFFFF; width:100%; border: 0px; }
 .dida { font-size: 80%; }
@@ -89,12 +162,8 @@ button { font-size : 70%  }
 textarea { font-size : 70% }
 
 .tab { font-size : 85%; border: 0 }
-.tab a:link {   text-decoration : none;  }
-.tab a:visited { text-decoration : none; }
-
 .trail { font-size: 70%; }
-.trail a:link {   text-decoration : none;  }
-.trail a:visited { text-decoration : none; }
+
 
 .dtdTag {    color: #990000; text-transform : uppercase;  font-style : normal;  font-size : 120%;  font-weight : bold; }
 
@@ -189,3 +258,9 @@ textarea { font-size : 70% }
   .bottom-right-thick  { display: none;  }
 
 }
+
+
+
+
+
+
